# PyGeneticAlgorithms

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py
code/: test_main.py
code/tests/: test_auxiliary.py  test_chromosome.py  test_clockwise_migration.py  test_crossover_operator.py  test_gene.py  test_genetic_operator.py  test_migration_operator.py  test_multi_point_crossover.py  test_mutation_operator.py  test_order_crossover.py  test_random_mutator.py  test_selection_operator.py  test_shuffle_mutator.py  test_single_point_crossover.py  test_super_crossover.py  test_super_mutator.py  test_swap_mutator.py  (+1 more)
docs/: conf.py  examples.rst  gaussian_2d.rst  index.rst  modules.rst  pygenalgo.engines.rst  pygenalgo.operators.crossover.rst  pygenalgo.operators.migration.rst  pygenalgo.operators.mutation.rst  pygenalgo.operators.rst  pygenalgo.operators.selection.rst  pygenalgo.rst  pygenalgo.utils.rst  src.genome.rst  src.operators.rst  src.operators.selection.rst  tests.rst
examples/: binh_and_korn_multiobjective.ipynb  booth.ipynb  easom_in_parallel.ipynb  gaussian_mixture_2D.ipynb  one_max.ipynb  osyczka_kundu_multiobjective.ipynb  queens_puzzle.ipynb  rastrigin.ipynb  rosenbrock_on_a_disk.ipynb  shubert_2D.ipynb  sphere.ipynb  sphere_in_parallel.ipynb  tanaka_multiobjective.ipynb  test_Shubert_2D.ipynb  test_multimodal_2D.ipynb  tsp.ipynb  zakharov.ipynb
paper/: paper.bib  paper.md
pygenalgo/: __init__.py
tests/: test_auxiliary.py  test_chromosome.py  test_clockwise_migration.py  test_crossover_operator.py  test_flip_mutator.py  test_gene.py  test_generic_ga.py  test_genetic_operator.py  test_inverse_mutator.py  test_meta_crossover.py  test_meta_mutator.py  test_migration_operator.py  test_multi_point_crossover.py  test_mutation_operator.py  test_order_crossover.py  test_partially_mapped_crossover.py  test_position_based_crossover.py  test_random_migration.py  test_random_mutator.py  test_selection_operator.py  test_shuffle_mutator.py  test_single_point_crossover.py  test_super_crossover.py  test_super_mutator.py  test_swap_mutator.py  test_uniform_crossover.py  test_utilities.py
(+287 files in other folders)
