[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygenalgo"
version = "1.8.0"
description = "Genetic Algorithms toolbox in Python3"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
authors = [
    { name = "Michalis Vrettas, PhD", email = "michail.vrettas@gmail.com" }
]
keywords = ["optimization", "genetic algorithms", "island model"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "joblib",
]