[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygenalgo"
version = "1.9.0"
description = "Genetic Algorithms toolbox in Python3"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
authors = [
    { name = "Michalis Vrettas, PhD", email = "michail.vrettas@gmail.com" }
]
keywords = ["optimization", "genetic algorithms", "island model"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "joblib",
]
[project.urls]
Homepage = "https://github.com/vrettasm/PyGeneticAlgorithms"